$Id: ChangeLog 2007/08/30 14:00:13 mallet $

jrl-interface-giktask version 1.1 released August 30, 2007

	1. replace some of CjrlHumanoidDynamicRobot with CjrlDynamicRobot
	to make those interface more general.
	
jrl-interface-giktask version 1.0 released June 15, 2007