@@ -1,4 +1,5 @@
-$Id: ChangeLog 2007/08/30 14:00:13 mallet $
+2007/10/10
+	2. Correction in documentation.
 
 jrl-interface-giktask version 1.1 released August 30, 2007
 
